--- a/figures/code/fig3_Resp_Time.ipynb
+++ b/figures/code/fig3_Resp_Time.ipynb
@@ -151,9 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\khemr\\anaconda3\\lib\\site-packages\\scipy\\integrate\\odepack.py:247: ODEintWarning: Excess work done on this call (perhaps wrong Dfun type). Run with full_output = 1 to get quantitative information.\n",
+      "  warnings.warn(warning_msg, ODEintWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "sList = np.logspace(-3,3,101)\n",
     "\n",
@@ -234,7 +243,7 @@
     "    k2=200/((1+s)*(Ty0+Tyf)) # this means that k2 (1+s) is like 100 times faster\n",
     "    k1=k2*s/Sconc\n",
     "    ICext=getExtendedIC([k1, k2, k3, k4, k5, k6, XT, YT])\n",
-    "    time=np.linspace(0,10000,100001)\n",
+    "    time=np.linspace(0,500,10001)\n",
     "    sol_conc=sp.integrate.odeint(getExtendedODE,ICext, time, args=(Sconc,[k1, k2, k3, k4, k5, k6, XT, YT]),rtol='1e-12')\n",
     "    val=sol_conc[-1,4]/sol_conc[-1,2]\n",
     "    TyConcDR.append(val)\n",
